--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -4,7 +4,7 @@ import SocialLinksList from "@components/UI/SocialLinksList.astro";
 
 <footer id="footer" class="wrapper">
   <div id="footer-top">
-    <form id="footer-form">
+    <!-- <form id="footer-form">
       <label for="footer-email">Join my mailing list to stay up-to-date.</label>
       <input
         type="email"
@@ -14,7 +14,7 @@ import SocialLinksList from "@components/UI/SocialLinksList.astro";
         required
       />
       <button type="submit">Submit</button>
-    </form>
+    </form> -->
     <span>Weblate.</span>
   </div>
 
