--- a/src/components/sections/HowToSection.astro
+++ b/src/components/sections/HowToSection.astro
@@ -4,13 +4,9 @@ import tabs from "@data/howTo.json";
 import PrinciplesIcon from "@images/principles.svg";
 ---
 
-<Section id="how-to" title="Principles & Approach" class="wrapper grid-wrapper">
-  <main class="grid-wrapper__subgrid" data-tabs>
-    <div
-      role="tablist"
-      aria-labelledby="how-to-title"
-      class="col-span-full ps-2.5 flex gap-0.5"
-    >
+<Section id="how-to" title="Principles & Approach" class="wrapper">
+  <main data-tabs>
+    <div role="tablist" aria-labelledby="how-to-title">
       {
         tabs.map((tab, index) => (
           <button
@@ -20,7 +16,6 @@ import PrinciplesIcon from "@images/principles.svg";
             aria-selected={index === 0 ? "true" : "false"}
             aria-controls={`panel-${index}`}
             tabindex={index === 0 ? "0" : "-1"}
-            class="px-2.5 py-1.5 rounded-t-sm border border-neutral-500 border-b-0 cursor-pointer aria-selected:bg-neutral-500"
             data-tab-button
           >
             {tab.title}
@@ -32,7 +27,6 @@ import PrinciplesIcon from "@images/principles.svg";
     {
       tabs.map((tab, index) => (
         <section
-          class="grid-wrapper__subgrid py-1.5 px-4 bg-neutral-500/90 divide-y divide-dashed divide-zinc-800 rounded-sm"
           id={`panel-${index}`}
           role="tabpanel"
           aria-labelledby={`tab-${index}`}
@@ -41,48 +35,14 @@ import PrinciplesIcon from "@images/principles.svg";
           data-tab-panel
         >
           {tab.items.map((item) => (
-            <article class="py-2.5 grid-wrapper__subgrid grid gap-y-1.5">
-              <h3 class="heading-mono leading-6">{item.title}</h3>
-              <p class="max-w-prose">{item.description}</p>
-              <PrinciplesIcon class="max-lg:hidden lg:w-6 lg:aspect-square lg:justify-self-end" />
+            <article>
+              <h3>{item.title}</h3>
+              <p>{item.description}</p>
+              <PrinciplesIcon />
             </article>
           ))}
         </section>
       ))
     }
   </main>
-
-  <script>
-    const tabButtons = document.querySelectorAll("[data-tab-button]");
-    const tabPanels = document.querySelectorAll("[data-tab-panel]");
-
-    function activateTab(newTab) {
-      tabButtons.forEach((btn) => {
-        btn.setAttribute("aria-selected", "false");
-        btn.setAttribute("tabindex", "-1");
-      });
-      tabPanels.forEach((panel) => ((panel as HTMLElement).hidden = true));
-
-      newTab.setAttribute("aria-selected", "true");
-      newTab.setAttribute("tabindex", "0");
-      const panelId = newTab.getAttribute("aria-controls");
-      document.getElementById(panelId).hidden = false;
-      newTab.focus();
-    }
-
-    tabButtons.forEach((button) => {
-      button.addEventListener("click", () => activateTab(button));
-      button.addEventListener("keydown", (e: KeyboardEvent) => {
-        let idx = [...tabButtons].indexOf(button);
-        if (e.key === "ArrowRight") {
-          idx = (idx + 1) % tabButtons.length;
-          activateTab(tabButtons[idx]);
-        }
-        if (e.key === "ArrowLeft") {
-          idx = (idx - 1 + tabButtons.length) % tabButtons.length;
-          activateTab(tabButtons[idx]);
-        }
-      });
-    });
-  </script>
 </Section>
