--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -8,9 +8,7 @@ import Layout from "@layouts/Layout.astro";
     class="wrapper min-h-dvh relative flex flex-col justify-center items-center text-center text-balance"
   >
     <h1 class="text-xl mb-2">Server Error</h1>
-    <p class="mb-5">
-      Something went wrong on our end. Please try again later.
-    </p>
+    <p class="mb-5">Something went wrong on our end. Please try again later.</p>
     <a class="block border border-current rounded-md py-2 px-4" href="/"
       >Go back to the homepage</a
     >
