--- a/src/components/sections/ServicesSection/ServiceCard.astro
+++ b/src/components/sections/ServicesSection/ServiceCard.astro
@@ -1,21 +1,13 @@
 ---
 const { title, index } = Astro.props;
-import Sdf from "@images/sdf.svg";
 ---
 
-<article
-  class="grid border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid max-md:[&:last-child>svg]:hidden"
->
-  <span aria-hidden="true" class="mb-3">S/{index}</span>
-  <h3 class="text-2xl mb-6">{title}</h3>
-  <main
-    class="grid-wrapper__center-cell indent-text-indent leading-7 max-w-prose flex flex-col gap-y-2 mt-auto"
-  >
+<article data-service>
+  <span aria-hidden="true">S/{index}</span>
+  <h3>{title}</h3>
+  <main>
     <slot />
     <slot name="aside" />
   </main>
-  <Sdf
-    class="max-w-60 self-center justify-self-center max-md:mt-6 md:justify-self-start md:max-lg:w-2/3 lg:w-8/9 lg:justify-self-end lg:row-span-2"
-  />
-  <!-- <div class="w-2.5 bg-fuchsia-100 aspect-square"></div> -->
+  <slot name="icon" />
 </article>
