Add Projects to menu, fix service icons selector, add umami tracking for projects

--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -61,9 +61,14 @@ import SocialLinksList from "@components/UI/SocialLinksList.astro";
               ><span aria-hidden="true">03</span>Principles & Approach</a
             >
           </li>
-          <!-- <li>
-            <a href="#projects"><span aria-hidden>04</span>Projects</a>
-          </li> -->
+          <li>
+            <a
+              data-umami-event="header-navigation"
+              data-umami-event-link="projects"
+              href="#projects"
+              ><span aria-hidden="true">04</span>Projects</a
+            >
+          </li>
         </ul>
         <address class="">
           <SocialLinksList variant="vertical" />
