--- a/src/styles/HomePage/services.css
+++ b/src/styles/HomePage/services.css
@@ -7,7 +7,7 @@
     }
 
     article[data-service] {
-      @apply grid border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid max-md:[&:last-child>.service-icon]:hidden;
+      @apply grid border-t border-dashed border-neutral-500 py-6 grid-wrapper__subgrid;
 
       & > span:first-of-type {
         @apply mb-3;
@@ -23,6 +23,10 @@
 
       & > svg {
         @apply max-w-60 self-center justify-self-center max-md:mt-6 md:justify-self-start md:max-lg:w-2/3 lg:w-8/9 lg:justify-self-end lg:row-span-2;
+
+        &:last-child > svg {
+          @apply max-md:hidden;
+        }
       }
     }
   }
